--- a/env/.env
+++ b/env/.env
@@ -7,9 +7,9 @@ VITE_WX_APPID = 'wx8e287639924edb51'
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/
 
-VITE_SERVER_BASEURL = ''
+VITE_SERVER_BASEURL = 'https://api.imonkey430.com'
 # 上传接口
-VITE_UPLOAD_BASEURL = ''
+VITE_UPLOAD_BASEURL = 'https://api.imonkey430.com'
 
 # 有些同学可能需要在微信小程序里面根据 develop、trial、release 分别设置上传地址，参考代码如下。
 # 下面的变量如果没有设置，会默认使用 VITE_SERVER_BASEURL or VITE_UPLOAD_BASEURL
