--- a/env/.env.production
+++ b/env/.env.production
@@ -5,4 +5,4 @@ VITE_DELETE_CONSOLE = true
 # 是否开启sourcemap
 VITE_SHOW_SOURCEMAP = false
 
-VITE_SERVER_BASEURL = 'https://api3.boot.jeecg.com'
+VITE_SERVER_BASEURL = 'https://api.imonkey430.com'
