--- a/env/.env
+++ b/env/.env
@@ -2,7 +2,7 @@ VITE_APP_TITLE = 'JeecgBoot-uniapp'
 VITE_APP_PORT = 9000
 
 VITE_UNI_APPID = '__UNI__E0CC280'
-VITE_WX_APPID = 'wx8e287639924edb51'
+VITE_WX_APPID = 'wx45bf919133590f1b'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/
