--- a/src/manifest.json
+++ b/src/manifest.json
@@ -100,7 +100,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wx8e287639924edb51",
+    "appid": "wx45bf919133590f1b",
     "setting": {
       "urlCheck": false,
       "minified": true,
